2013-12-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/scripts/sdcc.nsi: copy either sjlj or seh support dll

2013-12-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/abs.c,         device/lib/acosf.c,         device/lib/asincosf.c,
	* device/lib/asinf.c,       device/lib/atan2f.c,        device/lib/atanf.c,
	* device/lib/ceilf.c,       device/lib/cosf.c,          device/lib/coshf.c,
	* device/lib/cotf.c,        device/lib/expf.c,          device/lib/fabsf.c,
	* device/lib/floorf.c,      device/lib/frexpf.c,        device/lib/labs.c,
	* device/lib/ldexpf.c,      device/lib/log10f.c,        device/lib/logf.c,
	* device/lib/modff.c,       device/lib/powf.c,          device/lib/rand.c,
	* device/lib/sincosf.c,     device/lib/sincoshf.c,      device/lib/sinf.c,
	* device/lib/sinhf.c,       device/lib/sqrtf.c,         device/lib/tancotf.c,
	* device/lib/tanf.c,        device/lib/tanhf.c,
	* device/include/math.h: removed const from arguments

	* device/lib/pic14/libm/acosf.c,    device/lib/pic14/libm/asincosf.c,
	* device/lib/pic14/libm/asinf.c,    device/lib/pic14/libm/atan2f.c,
	* device/lib/pic14/libm/atanf.c,    device/lib/pic14/libm/ceilf.c,
	* device/lib/pic14/libm/cosf.c,     device/lib/pic14/libm/coshf.c,
	* device/lib/pic14/libm/cotf.c,     device/lib/pic14/libm/errno.c,
	* device/lib/pic14/libm/expf.c,     device/lib/pic14/libm/fabsf.c,
	* device/lib/pic14/libm/floorf.c,   device/lib/pic14/libm/frexpf.c,
	* device/lib/pic14/libm/ldexpf.c,   device/lib/pic14/libm/log10f.c,
	* device/lib/pic14/libm/logf.c,     device/lib/pic14/libm/modff.c,
	* device/lib/pic14/libm/powf.c,     device/lib/pic14/libm/sincosf.c,
	* device/lib/pic14/libm/sincoshf.c, device/lib/pic14/libm/sinf.c,
	* device/lib/pic14/libm/sinhf.c,    device/lib/pic14/libm/sqrtf.c,
	* device/lib/pic14/libm/tancotf.c,  device/lib/pic14/libm/tanf.c,
	* device/lib/pic14/libm/tanhf.c,
	* device/include/pic14/math.h: removed const from arguments
